--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,15 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+JCSVImporter.meta
+LICENSE.meta
+Pictures.meta
+Pictures/auto-example-1.png.meta
+Pictures/auto-example-2.png.meta
+Pictures/autoQuick-bad-example-1.png.meta
+Pictures/autoQuick-example-1.png.meta
+Pictures/autoQuick-example-2.png.meta
+Pictures/example-1.png.meta
+Pictures/example-2.png.meta
+Pictures/example-3.png.meta
+README.md.meta
